--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html, body{
     /*This make sure that all tag background colors reach the edge of the browser*/
     margin: 0;
     padding: 0;
+    height: 100%;
     font-size: 100%;
 }
 body.nonIndex {
@@ -87,22 +88,25 @@ img {
     left: 38%;
     width: 58%;
     height: 87%;
+    float: right;
     background-color: aliceblue;
     border-radius: 10px;
     border: none;
+    overflow:hidden;
 }
 iframe {
     position: absolute;
-    left: 0em;
     width: 100%;
     height: 100%;
+    float: right;
     border: none;
     border-radius: 10px;
+    overflow:hidden;
 }
 #code {
     background-color: rgb(53, 53, 53);
     width: 100%;
-    height: 56.3em;
+    height: 100%;
     font-size: .8em;
     text-align: left;
     margin: 0 auto;
@@ -110,8 +114,7 @@ iframe {
     font-family: Monaco;
 }
 #code.codeProject {
-    overflow-x: auto;
-    display: inline-block;
+    overflow-x: hidden;
 }
 #console {
     width: 100%;
